# pycount_caseexample

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycount_caseexample/: datasets.py  plotting.py  pycount_caseexample.py
tests/: test_pycount_caseexample.py
