[tool.poetry]
name = "pycount_caseexample"
version = "0.1.0"
description = "Counts the number of words in a file"
authors = ["nobody"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
